--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -10,6 +10,9 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listview_chat_list" />
+        android:id="@+id/listview_chat_list"
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll"
+        />
 
 </RelativeLayout>
