--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,18 +1,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
+    android:background="#AAA"
     tools:context="com.davidnuon.canadaonline.ChatActivity">
 
 
     <ListView
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listview_chat_list"
         android:stackFromBottom="true"
         android:transcriptMode="alwaysScroll"
-        />
+        android:background="#FFF"
+        android:layout_marginBottom="1dp"
+        android:layout_above="@+id/messageText" />
+
+    <EditText
+        android:background="#fff"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/messageText"
+        android:hint="Party like it's 1999"
+        android:padding="12dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
