--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -14,7 +14,11 @@
         android:id="@+id/listview_chat_list"
         android:stackFromBottom="true"
         android:transcriptMode="alwaysScroll"
+        android:dividerHeight="0dp"
         android:background="#FFF"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false"
+        android:divider="@android:color/transparent"
         android:layout_marginBottom="1dp"
         android:layout_above="@+id/messageText" />
 
